--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "react-table": "^7.8.0",
     "redux-logger": "^3.0.6",
+    "sass": "^1.62.1",
     "socket.io-client": "^4.6.1",
     "web-vitals": "^2.1.4"
   },
